# kafka-openmp

./: .gitignore  README.md  kafka_utils.c  kafka_utils.h  main.c  meson.build  parallel_producer.c  parallel_producer.h  read_data.c  read_data.h  run_tests.sh  simple_producer.c
output_data/: stats.json
output_data/binary/: basic_producer_1_cores_shared.json  basic_producer_6_cores_shared.json  producer_ack_all_idemp_enabled_gzip_10_cores_private.json  producer_ack_all_idemp_enabled_gzip_10_cores_shared.json  producer_ack_all_idemp_enabled_gzip_12_cores_private.json  producer_ack_all_idemp_enabled_gzip_12_cores_shared.json  producer_ack_all_idemp_enabled_gzip_1_cores_private.json  producer_ack_all_idemp_enabled_gzip_1_cores_shared.json  producer_ack_all_idemp_enabled_gzip_24_cores_shared.json  producer_ack_all_idemp_enabled_gzip_2_cores_private.json  producer_ack_all_idemp_enabled_gzip_2_cores_shared.json  producer_ack_all_idemp_enabled_gzip_36_cores_shared.json  producer_ack_all_idemp_enabled_gzip_48_cores_shared.json  producer_ack_all_idemp_enabled_gzip_6_cores_private.json  producer_ack_all_idemp_enabled_gzip_6_cores_shared.json  producer_ack_one_10_cores_private.json  producer_ack_one_1_cores_private.json  (+67 more)
src/: kafka_utils.c  kafka_utils.h  main.c  parallel_producer.c  parallel_producer.h  producer_builder.c  producer_builder.h  read_data.c  read_data.h  test_read_file.c  trapezoid.c  trapezoid.h
utils/: calc_setup_avg.py  calc_setup_latencies.py  get_latencies.py  get_profile_runtimes.py  get_setup_runtimes.py  parse_json.py  print_producer_type_avg.py
(+854 files in other folders)
